HDS-3612 Clean up CSS, fix z-indexs so AppHeader overlays SideNav and overlay is above AppHeader

--- a/packages/components/src/styles/components/app-header.scss
+++ b/packages/components/src/styles/components/app-header.scss
@@ -13,7 +13,6 @@
 
 .hds-app-header {
   position: relative;
-  z-index: 20; // needs to stay above the main content
   display: flex;
   gap: 12px;
   align-items: center;
